# butcher

./: .gitignore  .gitreview  BUILD  Gemfile  Makefile  README.md  README.rst  butcher.py  pants.ini  requirements.txt  setup.cfg
buildy/: BUILD  address.py  builder.py  buildfile.py  buildtarget.py  butcher.py  cache.py  deps.dot  error.py  gitrepo.py  graph.py  graphtest.py  util.py
buildy/nodes/: BUILD  __init__.py  deb.py  filegroup.py  generic.py  gitrepo.py  unresolved.py
buildy/targets/: BUILD  __init__.py  base.py  filegroup.py  gendeb.py  genrule.py  pkgfilegroup.py  unimplemented.py  virtual.py
butcher/: BUILD  README.md  address.py  builder.py  buildfile.py  buildfile_context.py  butcher.py  cache.py  error.py  gitrepo.py  graph.py  main.py  rubygems.py  util.py  util_test.py
butcher/target_context/: __init__.py
butcher/targets/: BUILD  __init__.py  base.py  filegroup.py  gendeb.py  genrule.py  genrule_test.py  pkgfilegroup.py  unimplemented.py  virtual.py
src/butcher/: address.py  butcher.py  gitrepo.py  notes.md  rubygems.py
src/butcher/targets/: base.py  filegroup.py  gendeb.py  genrule.py  pkg_symlink.py  virtual.py
src/cloudscaling/butcher/: BUILD  address.py  buildfile.py  buildfile_context.py  butcher.py  cache.py  error.py  gitrepo.py  rubygems.py  util.py  util_test.py
src/cloudscaling/butcher/target_context/: __init__.py
src/cloudscaling/butcher/targets/: BUILD  __init__.py  base.py  filegroup.py  gendeb.py  genrule.py  genrule_test.py  pkg_symlink.py  pkgfilegroup.py  (+2 more)
tools/: BUILD  gem-fetch-dependencies.rb  python_getvar.py
