[metadata]
name = butcher
author = Benjamin Staffin
author-email = benley@gmail.com
home-page = https://github.com/benley/butcher
description-file = README.rst
license = Apache-2
summary = General-purpose build system for projects spanning multiple git repos
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX
  Topic :: Software Development :: Build Tools

[pbr]
warnerrors = True

[entry_points]
console_scripts =
  butcher = butcher.main:stub_main

[files]
packages =
  butcher

[bdist_wheel]
universal = 1
